fix: fix build error