@@ -1,79 +1,30 @@
-# Generated file: do NOT change
-FROM registry.openanalytics.eu/proxy/library/debian:buster as builder
+# FINAL IMAGE
+FROM registry.openanalytics.eu/openanalytics/phaedra-r-base
 
-RUN mkdir /opt/phaedra2
+RUN apt-get update && \
+    apt-get install -y openjdk-18-jdk maven
+
+# Set environment variables for JDK 17
+ENV JAVA_HOME=/usr/lib/jvm/java-18-openjdk-amd64
+ENV PATH=$PATH:$JAVA_HOME/bin
+
+RUN apt-get install -y curl
+
 ARG JAR_FILE
 ADD $JAR_FILE /opt/phaedra2/phaedra2-scriptengine-worker.jar
 
-RUN apt-get update -y && \
-    apt-get install unzip && \
-    unzip -p  /opt/phaedra2/phaedra2-scriptengine-worker.jar META-INF/MANIFEST.MF | sed -En 's/Implementation-Version: (.*)\r/\1/gp' > /opt/phaedra2/VERSION
+RUN chmod a+rwx -R /opt/phaedra2/
 
-# FINAL IMAGE
-FROM registry.openanalytics.eu/openanalytics/phaedra-r-base
-RUN apt-get update -y && \
-    apt-get install -y unzip wget build-essential cmake
-
-ENV JAVA_HOME /usr/local/openjdk-18
-ENV PATH $JAVA_HOME/bin:$PATH
-ENV LANG C.UTF-8
-ENV JAVA_VERSION 18.0.1.1
-
-ARG downloadUrl='https://download.java.net/java/GA/jdk18.0.1.1/65ae32619e2f40f3a9af3af1851d6e19/2/GPL/openjdk-18.0.1.1_linux-x64_bin.tar.gz'
-ARG downloadSha256='4f81af7203fa4c8a12c9c53c94304aab69ea1551bc6119189c9883f4266a2b24'
-
-RUN	wget --progress=dot:giga -O openjdk.tgz $downloadUrl
-RUN	echo "$downloadSha256 *openjdk.tgz" | sha256sum --strict --check -
-RUN mkdir -p "$JAVA_HOME"
-RUN	tar --extract --file openjdk.tgz --directory "$JAVA_HOME" --strip-components 1 --no-same-owner
-
-RUN	rm openjdk.tgz*; \
-	\
-	{ \
-		echo '#!/usr/bin/env bash'; \
-		echo 'set -Eeuo pipefail'; \
-		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$JAVA_HOME/lib/security/cacerts"'; \
-	} > /etc/ca-certificates/update.d/docker-openjdk; \
-	chmod +x /etc/ca-certificates/update.d/docker-openjdk; \
-	/etc/ca-certificates/update.d/docker-openjdk; \
-	\
-	find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; \
-	ldconfig; \
-	\
-	java -Xshare:dump; \
-	\
-	fileEncoding="$(echo 'System.out.println(System.getProperty("file.encoding"))' | jshell -s -)"; [ "$fileEncoding" = 'UTF-8' ]; rm -rf ~/.java; \
-	javac --version; \
-	java --version
-
-LABEL maintainer="Tobia De Koninck <tdekoninck@openanalytics.eu>"
+LABEL maintainer="Saša Berberović <sasa.berberovic@openanalytics.eu>"
 
 ENV PHAEDRA_USER phaedra
 
 RUN useradd -c 'phaedra user' -m -d /home/$PHAEDRA_USER -s /bin/nologin $PHAEDRA_USER
-COPY --from=builder --chown=$PHAEDRA_USER:$PHAEDRA_USER /opt/phaedra2 /opt/phaedra2
-
-#ADD user_package_library/glpgPhaedra /opt/phaedra2/user_package_library/glpgPhaedra
-#ADD user_package_library/receptor2 /opt/phaedra2/user_package_library/receptor2
-
-#RUN R -e "install.packages('rjson')"
-#RUN R -e "install.packages('plyr')"
-#RUN R -e "install.packages('ape')"
-#RUN R -e "install.packages('reshape2')"
-#RUN R -e "install.packages('kSamples')"
-#RUN R -e "install.packages('nloptr')"
-#RUN R -e "install.packages('lme4')"
-#RUN R -e "install.packages('pbkrtest')"
-#RUN R -e "install.packages('car')"
-#RUN R -e "install.packages('drc')"
-#RUN R -e "install.packages('ggplot2')"
-#
-#RUN R -e "install.packages('/opt/phaedra2/user_package_library/glpgPhaedra',repos=NULL, type='source')"
-#RUN R -e "install.packages('/opt/phaedra2/user_package_library/receptor2',repos=NULL, type='source')"
+#COPY --from=builder --chown=$PHAEDRA_USER:$PHAEDRA_USER /opt/phaedra2 /opt/phaedra2
 
 WORKDIR /opt/phaedra2
 USER $PHAEDRA_USER
 
 # ADD application.yml /opt/phaedra2/application.yml
 
-CMD ["java", "-jar", "/opt/phaedra2/phaedra2-scriptengine-worker.jar", "--spring.jmx.enabled=false"]
+CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/opt/phaedra2/phaedra2-scriptengine-worker.jar"]
